# FLux

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: main.py
backend/api/: routes.py  schemas.py
backend/services/: encryption.py  prediction.py
data/test/: model_params.json  sample_flo_export.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CycleCalendar.tsx  CycleProgress.tsx  FileUpload.tsx  Layout.tsx  PredictionCard.tsx  QuickLog.tsx
frontend/src/contexts/: AppContext.tsx  AuthContext.tsx
frontend/src/lib/: auth.ts  db.ts  types.ts
frontend/src/pages/: Dashboard.tsx  Import.tsx  LogEntry.tsx  Login.tsx  Settings.tsx
frontend/src/utils/: encryption.ts
ml/: __init__.py  __main__.py
ml/preprocessing/: __init__.py  feature_engineering.py  flo_parser.py
ml/training/: train.py
tests/backend/: test_api.py
tests/ml/: test_encryption.py  test_predictor.py
