[project]
name = "flux"
version = "0.1.0"
description = "Privacy-focused period tracking with ML predictions"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pandas>=2.0.0",
    "fastapi>=0.110.0",
    "cryptography>=42.0.0",
    "uvicorn>=0.29.0",
]

[project.optional-dependencies]
# Full ML with Prophet (recommended)
ml = [
    "prophet>=1.1.0",
]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pandas-stubs>=2.0.0",
]
# All dependencies
all = [
    "flux[ml,dev]",
]

[project.scripts]
flux-train = "ml.training.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
